--- a/static/css/login.css
+++ b/static/css/login.css
@@ -62,11 +62,15 @@ h1 {
   color: #191c84;
 }
 
+/*body {*/
+/*  background: #76b852; *//* fallback for old browsers */
+/*  background: rgb(141,194,111);*/
+/*  background: linear-gradient(90deg, rgba(141,194,111,1) 0%, rgba(118,184,82,1) 50%);*/
+/*  font-family: "Roboto", sans-serif;*/
+/*  -webkit-font-smoothing: antialiased;*/
+/*  -moz-osx-font-smoothing: grayscale;*/
+/*}*/
 body {
-  background: #76b852; /* fallback for old browsers */
-  background: rgb(141,194,111);
-  background: linear-gradient(90deg, rgba(141,194,111,1) 0%, rgba(118,184,82,1) 50%);
-  font-family: "Roboto", sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  background: url(static/img/45a.jpg);
+  background-repeat: no-repeat;
 }
