--- a/templates/appointment.html
+++ b/templates/appointment.html
@@ -126,7 +126,11 @@
                 <textarea name="description" id="appointment_description"  rows="6"
                           placeholder="Briefly describe your project and what you are looking for"></textarea>
             </div>
-            <div></div>
+            <div class="field-wrapper">
+                <label for="appointment_address">Address</label>
+                <textarea name="address" id="appointment_address"  rows="2"
+                          placeholder="Enter your location of the project" required></textarea>
+            </div>
             <div>
                 <label for="agree"><input id="agree" name="agree" type="checkbox" required > I accept the terms and conditions</label>
             </div>
