--- a/templates/login.html
+++ b/templates/login.html
@@ -9,7 +9,7 @@
   <title>Sign in</title>
 </head>
 
-<body>
+<body style="background: url(../static/img/40a.jpg); background-repeat: no-repeat; object-fit: cover;">
   <div class="login-page">
     <h1>Staff Login</h1>
     <div class="form">
