--- a/templates/staff_dashboard.html
+++ b/templates/staff_dashboard.html
@@ -103,7 +103,7 @@
                     <i class="uil uil-bell"></i>
                     <span class="link-name">Notification</i><mark class="big swing">{{ unread_count }}</mark></span>
                 </a></li>
-                <li><a href="{% url 'admin_blogs' %}">
+                <li><a href="{% url 'staff_blog' %}">
                     <i class="uil uil-user-plus"></i>
                     <span class="link-name">Blogs</span>
                 </a></li>
