--- a/templates/team.html
+++ b/templates/team.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Furniture</title>
+	<title>Future Home | Team</title>
 	<link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet" >
 	<link href="{% static 'css/font-awesome.min.css' %}" rel="stylesheet" >
 	<link href="{% static 'css/global.css' %}" rel="stylesheet">
@@ -31,7 +31,7 @@
   <div class="container-fluid">
     <div class="center_o1 row text-center">
 	 <div class="col-md-12">
-	   <h6 class="col_yell fw-bold"><a class="text-white" href="#">HOME PAGE</a> <span class="mx-2 text-muted">/</span> TEAM</h6>
+	   <h6 class="col_yell fw-bold"><a class="text-white" href="{% url 'home' %}">HOME PAGE</a> <span class="mx-2 text-muted">/</span> TEAM</h6>
 	   <h1 class="mb-0 font_60 text-white mt-3">Team</h1>
 	 </div>
 	</div>
