--- a/templates/about.html
+++ b/templates/about.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Furniture</title>
+	<title>Future Home | About</title>
 	<link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet" >
 	<link href="{% static 'css/font-awesome.min.css' %}" rel="stylesheet" >
 	<link href="{% static 'css/global.css' %}" rel="stylesheet">
@@ -31,7 +31,7 @@
   <div class="container-fluid">
     <div class="center_o1 row text-center">
 	 <div class="col-md-12">
-	   <h6 class="col_yell fw-bold"><a class="text-white" href="#">HOME PAGE</a> <span class="mx-2 text-muted">/</span> ABOUT</h6>
+	   <h6 class="col_yell fw-bold"><a class="text-white" href="{% url 'home' %}">HOME PAGE</a> <span class="mx-2 text-muted">/</span> ABOUT</h6>
 	   <h1 class="mb-0 font_60 text-white mt-3">About</h1>
 	 </div>
 	</div>
@@ -57,7 +57,7 @@
 	  <h5 class="col_yell">ABOUT US</h5>
 	  <h1 class="mt-3 mb-4">Creative solutions <br> by professional <br>  designers</h1>
 	  <p>Your kitchen is an expression of who you are, and its design should match your lifestyle. Whether you have traditional tastes or desire a modern feel, we can design your dream kitchen to suit any purpose.</p>
-	  <h6 class="mb-0 mt-4"><a class="button_1" href="#">CONTINUE READING <i class="fa fa-long-arrow-right ms-1"></i></a></h6>
+	  <h6 class="mb-0 mt-4"><a class="button_1" href="{% url 'appointment' %}">BOOK APPOINTMENT <i class="fa fa-long-arrow-right ms-1"></i></a></h6>
 	 </div>
 	</div>
   </div>
@@ -147,7 +147,7 @@ Feel More Confident</h1>
 	  <p class="text-white-50">We’re following all protocols to ensure your safety and
 vaccination drives are underway to ensure our employees
 are ready to meet you safely.</p>
-	 <h6 class="mb-0 mt-4 text-uppercase font_14"><a class="button" href="#">All News</a> </h6>
+	 <h6 class="mb-0 mt-4 text-uppercase font_14"><a class="button" href="{% url 'blog' %}">All News</a> </h6>
 	</div>
    </div>
    <div class="col-md-6">
@@ -374,7 +374,7 @@ are ready to meet you safely.</p>
 	 <div class="col-md-12">
 	  <h6 class="col_yell fw-bold">YOU DREAM IT, WE DESIGN IT</h6>
 	  <h1 class="text-white mt-3">We can build you the kitchen <br> of your dreams</h1>
-	  <h6 class="mb-0 mt-4"><a class="button" href="#">SCHEDULE A CHAT <i class="fa fa-calendar ms-1"></i></a></h6>
+	  <h6 class="mb-0 mt-4"><a class="button" href="{% url 'appointment' %}">SCHEDULE A CHAT <i class="fa fa-calendar ms-1"></i></a></h6>
 	 </div>
 	</div>
  </div>
