--- a/templates/blog.html
+++ b/templates/blog.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Furniture</title>
+	<title>Future Home | Blog</title>
 	<link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet" >
 	<link href="{% static 'css/font-awesome.min.css' %}" rel="stylesheet" >
 	<link href="{% static 'css/global.css' %}" rel="stylesheet">
@@ -30,7 +30,7 @@
 		<div class="container-fluid">
 			<div class="center_o1 row text-center">
 				<div class="col-md-12">
-					<h6 class="col_yell fw-bold"><a class="text-white" href="#">HOME PAGE</a> <span class="mx-2 text-muted">/</span> BLOG</h6>
+					<h6 class="col_yell fw-bold"><a class="text-white" href="{% url 'home' %}">HOME PAGE</a> <span class="mx-2 text-muted">/</span> BLOG</h6>
 					<h1 class="mb-0 font_60 text-white mt-3">Blog</h1>
 				</div>
 			</div>
@@ -41,29 +41,34 @@
 <section id="blog_pg" class="p_3  px-4">
 	<div class="container-fluid">
 		<div class="blog_pg1 row">
-			<div class="col-md-8">
+			<div class="col-md-12">
 				<div class="blog_pg1l">
 					{% for i in blog %}
+					{% for j in author %}
+					{% if i.user_id == j.id %}
 					<div class="blog_pg1li row">
 						<div class="col-md-6">
 							<div class="blog_pg1lil">
 								<div class="grid clearfix">
 									<figure class="effect-jazz mb-0">
-										<a href="blog_detail.html"><img src="{{ i.image.url }}" class="w-100" alt="abc"></a>
+										<a href="{% url 'Blog_Detail' i.id %}"><img src="{{ i.image.url }}" class="w-100" alt="abc"></a>
 									</figure>
 								</div>
 							</div>
 						</div>
 						<div class="col-md-6">
 							<div class="blog_pg1lir">
-								<h6 class="font_14 text-muted"><i class="fa fa-user col_yell me-1"></i>{{ i.author }}</h6>
-								<h4 class="mt-3"><a href="blog_detail.html">{{ i.title }}</a></h4>
+								<h6 class="font_14 text-muted"><i class="fa fa-user col_yell me-1"></i>{{ j.username }}</h6>
+								<h4 class="mt-3"><a href="{% url 'Blog_Detail' i.id %}">{{ i.title }}</a></h4>
 								<p>{{ i.description }}</p>
 								<h6 class="mb-0 mt-4"><a class="button_1" href="{% url 'Blog_Detail' i.id %}">READ MORE <i class="fa fa-long-arrow-right ms-1"></i></a></h6>
 							</div>
 						</div>
 					</div><hr>
+					{% endif %}
 					{% endfor %}
+					{% endfor %}
+
 <!--					<div class="blog_pg1li row">-->
 <!--						<div class="col-md-6">-->
 <!--							<div class="blog_pg1lil">-->
@@ -159,18 +164,30 @@
 <!--							</div>-->
 <!--						</div>-->
 <!--					</div><hr>-->
-					<div class="pages  text-center">
+					<div class="pages text-center">
 						<ul class="mb-0">
-							<li><a href="blog_detail.html"><i class="fa fa-chevron-left"></i></a></li>
-							<li><a class="act" href="blog_detail.html">1</a></li>
-							<li><a href="blog_detail.html">2</a></li>
-							<li><a href="blog_detail.html">3</a></li>
-							<li><a href="blog_detail.html">4</a></li>
-							<li><a href="blog_detail.html">5</a></li>
-							<li><a href="blog_detail.html">6</a></li>
-							<li><a href="blog_detail.html"><i class="fa fa-chevron-right"></i></a></li>
+							{% if blog.has_previous %}
+								<li><a href="?page={{ blog.previous_page_number }}"><i class="fa fa-chevron-left"></i></a></li>
+							{% else %}
+								<li class="disabled"><i class="fa fa-chevron-left"></i></li>
+							{% endif %}
+
+							{% for num in blog.paginator.page_range %}
+								{% if blog.number == num %}
+									<li class="active"><a href="?page={{ num }}">{{ num }}</a></li>
+								{% elif num > blog.number|add:'-3' and num < blog.number|add:'3' %}
+									<li><a href="?page={{ num }}">{{ num }}</a></li>
+								{% endif %}
+							{% endfor %}
+
+							{% if blog.has_next %}
+								<li><a href="?page={{ blog.next_page_number }}"><i class="fa fa-chevron-right"></i></a></li>
+							{% else %}
+								<li class="disabled"><i class="fa fa-chevron-right"></i></li>
+							{% endif %}
 						</ul>
 					</div>
+
 				</div>
 			</div>
 		</div>
@@ -186,7 +203,7 @@
 				<div class="col-md-12">
 					<h6 class="col_yell fw-bold">YOU DREAM IT, WE DESIGN IT</h6>
 					<h1 class="text-white mt-3">We can build you the kitchen <br> of your dreams</h1>
-					<h6 class="mb-0 mt-4"><a class="button" href="#">SCHEDULE A CHAT <i class="fa fa-calendar ms-1"></i></a></h6>
+					<h6 class="mb-0 mt-4"><a class="button" href="{% url 'appointment' %}">SCHEDULE A CHAT <i class="fa fa-calendar ms-1"></i></a></h6>
 				</div>
 			</div>
 		</div>
