--- a/templates/blog_detail.html
+++ b/templates/blog_detail.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Furniture</title>
+	<title>Future Home | Blog Detail</title>
 	<link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet" >
 	<link href="{% static 'css/font-awesome.min.css' %}" rel="stylesheet" >
 	<link href="{% static 'css/global.css' %}" rel="stylesheet">
@@ -13,6 +13,12 @@
 	<link rel="shortcut icon" href="{% static 'img/favicon.png' %}" type="image/x-icon">
 	<link href="https://fonts.googleapis.com/css2?family=DM+Sans&display=swap" rel="stylesheet">
 	<script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
+	<style>
+		.center_blog_dt {
+			background-image: url(../static/img/48a.jpg);
+			background-position: center;
+		}
+	</style>
 
 </head>
 
@@ -25,7 +31,7 @@
   <div class="container-fluid">
     <div class="center_o1 row text-center">
 	 <div class="col-md-12">
-	   <h6 class="col_yell fw-bold"><a class="text-white" href="#">HOME PAGE</a> <span class="mx-2 text-muted">/</span> BLOG DETAIL</h6>
+	   <h6 class="col_yell fw-bold"><a class="text-white" href="{% url 'home' %}">HOME PAGE</a> <span class="mx-2 text-muted">/</span> BLOG DETAIL</h6>
 	   <h1 class="mb-0 font_60 text-white mt-3">Blog Detail</h1>
 	 </div>
 	</div>
@@ -39,6 +45,8 @@
 			<div class="col-md-8">
 				<div class="blog_pgdt">
 					{% for i in blog %}
+					{% for j in author %}
+					{% if i.user_id == j.id %}
 					<div class="blog_pgdt1">
 						<div class="grid clearfix">
 							<figure class="effect-jazz mb-0">
@@ -46,27 +54,38 @@
 							</figure>
 						</div>
 						<h1 class="mt-3">{{ i.title }}</h1>
-						<h6 class="font_14 mt-3 text-muted"><i class="fa fa-user col_yell me-1"></i>{{ i.author }}
-							<i class="fa fa-comments col_yell me-1 ms-2"></i> 3 Comments
+						<h6 class="font_14 mt-3 text-muted"><i class="fa fa-user col_yell me-1"></i>{{ j.username }}
 							<i class="fa fa-calendar col_yell me-1 ms-2"></i> {{ i.date }} </h6>
 						<p class="mt-3">{{ i.description }}</p>
 						<p>{{ i.detail }}</p>
 						<h3>{{ i.sub_title }}</h3>
+						 {% if i.image1 %}
 						<div class="blog_pgdt1i">
-							<img src="{{ i.image1 }}" class="float-start me-3">
+							<img src="{{ i.image1.url }}" class="float-start me-3">
 							<p>{{ i.exp }}</p>
 						</div>
+						{% endif %}
 						<div class="blog_pgdt1i1 row">
 							<div class="col-md-6">
 								<div class="blog_pgdt1i1l">
+									{% if prev_blog %}
 									<h6>PREV POST</h6>
-									<h5 class="mt-3 mb-0"><a href="#">Tips Minimalist</a></h5>
+									<h5 class="mt-3 mb-0"><a href="{% url 'Blog_Detail' prev_blog.id %}">{{ prev_blog.title }}</a></h5>
+									{% else %}
+										<h6>PREV POST</h6>
+										<p>No previous post</p>
+									{% endif %}
 								</div>
 							</div>
 							<div class="col-md-6">
 								<div class="blog_pgdt1i1r text-end">
-									<h6>PREV POST</h6>
-									<h5 class="mt-3 mb-0"><a href="#">Less Is More</a></h5>
+									{% if next_blog %}
+									<h6>NEXT POST</h6>
+									<h5 class="mt-3 mb-0"><a href="{% url 'Blog_Detail' next_blog.id %}">{{ next_blog.title }}</a></h5>
+									{% else %}
+										<h6>NEXT POST</h6>
+										<p>No next post</p>
+									{% endif %}
 								</div>
 							</div>
 						</div>
@@ -80,142 +99,132 @@
 						</div>
 						<h3 class="mt-4 center_sm">Related Blogs</h3>
 						<div class="row blog_1 mt-3">
+							{% for n in related_blog %}
+							{% for m in author %}
+							{% if n.user_id == m.id %}
+
 							<div class="col-md-6">
 								<div class="blog_1m">
-									<div class="grid clearfix">
-										<figure class="effect-jazz mb-0">
-											<a href="#"><img src="img/19.jpg" class="w-100" alt="abc"></a>
+									<div class="grid clearfix" style="height:266px;">
+										<figure class="effect-jazz mb-0" style="height:100%;">
+											<a href="{% url 'Blog_Detail' n.id %}"><img src="{{ n.image.url }}" class="w-100" alt="abc"></a>
 										</figure>
 									</div>
-									<h6 class="font_14 text-muted mt-3"><i class="fa fa-user col_yell me-1"></i> By Admin
-										<i class="fa fa-comments col_yell me-1 ms-2"></i> 3 Comments  </h6>
-									<h4 class="mt-3"><a href="#">Cras accumsan nulla nec lacus ultricies placerat.</a></h4>
-									<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p><h6 class="mb-0 fw-bold font_14"><a class="col_yell" href="#">READ MORE <i class="fa fa-long-arrow-right ms-1"></i></a></h6>
+									<h6 class="font_14 text-muted mt-3"><i class="fa fa-user col_yell me-1"></i> {{ m.username }}
+										</h6>
+									<h4 class="mt-3"><a href="{% url 'Blog_Detail' n.id %}">{{ n.title }}</a></h4>
+									<p>{{ n.description }}</p><h6 class="mb-0 fw-bold font_14"><a class="col_yell" href="{% url 'Blog_Detail' n.id %}">READ MORE <i class="fa fa-long-arrow-right ms-1"></i></a></h6>
 								</div>
 							</div>
-							<div class="col-md-6">
-								<div class="blog_1m">
-									<div class="grid clearfix">
-										<figure class="effect-jazz mb-0">
-											<a href="#"><img src="../static/img/20a.jpg" class="w-100" alt="abc"></a>
-										</figure>
-									</div>
-									<h6 class="font_14 text-muted mt-3"><i class="fa fa-user col_yell me-1"></i> By Admin
-										<i class="fa fa-comments col_yell me-1 ms-2"></i> 3 Comments  </h6>
-									<h4 class="mt-3"><a href="#">The Pros and Cons of Large Format Porcelain</a></h4>
-									<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
-									<h6 class="mb-0 fw-bold font_14"><a class="col_yell" href="#">READ MORE <i class="fa fa-long-arrow-right ms-1"></i></a></h6>
-								</div>
-							</div>
+							{% endif %}
+							{% endfor %}
+							{% endfor %}
+
+<!--							<div class="col-md-6">-->
+<!--								<div class="blog_1m">-->
+<!--									<div class="grid clearfix">-->
+<!--										<figure class="effect-jazz mb-0">-->
+<!--											<a href="#"><img src="../static/img/20a.jpg" class="w-100" alt="abc"></a>-->
+<!--										</figure>-->
+<!--									</div>-->
+<!--									<h6 class="font_14 text-muted mt-3"><i class="fa fa-user col_yell me-1"></i> By Admin-->
+<!--										</h6>-->
+<!--									<h4 class="mt-3"><a href="#">The Pros and Cons of Large Format Porcelain</a></h4>-->
+<!--									<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>-->
+<!--									<h6 class="mb-0 fw-bold font_14"><a class="col_yell" href="#">READ MORE <i class="fa fa-long-arrow-right ms-1"></i></a></h6>-->
+<!--								</div>-->
+<!--							</div>-->
 						</div>
 					</div>
+					{% endif %}
 					{% endfor %}
-					<div class="blog_pgdt3 mt-4">
-						<h3 class="center_sm">Leave a Reply</h3>
-						<p class="mt-3">Your email address will not be published. Required fields are marked <span class="col_red">*</span></p>
-						<div class="blog_pgdt3i row">
-							<div class="col-md-6">
-								<div class="blog_pgdt3il">
-									<input placeholder="Name" class="form-control" type="text">
-								</div>
-							</div>
-							<div class="col-md-6">
-								<div class="blog_pgdt3il">
-									<input placeholder="Email" class="form-control" type="text">
-								</div>
-							</div>
-						</div>
-						<div class="blog_1d2i row mt-3">
-							<div class="col-md-12">
-								<textarea placeholder="Enter your comment here..." class="form-control form_text"></textarea>
-								<div class="form-check mt-3">
-									<input class="form-check-input" type="checkbox" value="">
-									<label class="form-check-label" for="flexCheckDefault">
-										Save my name, email, and website in this browser for the next time I comment.
-									</label>
-								</div>
-								<h6 class="mb-0 mt-4 center_sm"><a class="button" href="#">POST COMMENT <i class="fa fa-long-arrow-right ms-1"></i></a></h6>
-							</div>
-						</div>
-					</div>
+					{% endfor %}
 				</div>
 			</div>
 			<div class="col-md-4">
 				<div class="blog_pg1r">
-					<div class="blog_pg1r1">
-						<h5>Search Blog</h5>
-						<hr class="line mb-4">
-						<div class="input-group border_1 p-2 rounded-3">
-							<input type="text" class="form-control border-0" placeholder="Search Here">
-							<span class="input-group-btn">
-								<button class="btn btn-primary bg-transparent rounded-0  border-0 col_yell" type="button">
-									<i class="fa fa-search"></i> </button>
-							</span>
+					<form method="get" action="{% url 'Blog_Detail' single_blog.id %}">
+						<div class="blog_pg1r1">
+							<h5>Search Blog</h5>
+							<hr class="line mb-4">
+							<div class="input-group border_1 p-2 rounded-3">
+								<input type="text" name="q" class="form-control border-0" placeholder="Search Here" value="{{ query }}">
+								<span class="input-group-btn">
+									<button class="btn btn-primary bg-transparent rounded-0 border-0 col_yell" type="submit">
+										<i class="fa fa-search"></i>
+									</button>
+								</span>
+							</div>
 						</div>
-					</div>
-					<div class="blog_pg1r1 mt-4">
-						<h5>Categories</h5>
-						<hr class="line mb-4">
-						<h6 class="mb-0"><a href="blog_detail.html">Accessories <span class="pull-right">(6)</span></a></h6><hr>
-						<h6 class="mb-0"><a href="blog_detail.html">Clothing <span class="pull-right">(4)</span></a></h6><hr>
-						<h6 class="mb-0"><a href="blog_detail.html">Hoodies <span class="pull-right">(5)</span></a></h6><hr>
-						<h6 class="mb-0"><a href="blog_detail.html">Music <span class="pull-right">(8)</span></a></h6><hr>
-						<h6 class="mb-0"><a href="blog_detail.html">Uncategorized <span class="pull-right">(7)</span></a></h6>
-					</div>
+					</form>
+					 <!-- Display Search Results -->
+					{% if search_results %}
+						<h2>Search Results</h2>
+						<ul>
+							{% for result in search_results %}
+								<li><a href="{% url 'Blog_Detail' result.id %}">{{ result.title }}</a></li>
+							{% endfor %}
+						</ul>
+					{% elif query %}
+						<p>No results found for "{{ query }}"</p>
+					{% endif %}
+					<!-- End Search Result -->
 					<div class="blog_pg1r1 mt-4">
 						<h5>Recent Posts</h5>
 						<hr class="line mb-4">
+						{% for k in blog_list %}
 						<div class="row blog_pg1r1i">
 							<div class="col-md-4 col-4 pe-0">
 								<div class="blog_pg1r1il">
 									<figure class="effect-jazz mb-0">
-										<a href="blog_detail.html"><img src="img/19.jpg" class="w-100" alt="abc"></a>
+										<a href="{% url 'Blog_Detail' k.id %}"><img src="{{ k.image.url }}" class="w-100" alt="abc"></a>
 									</figure>
 								</div>
 							</div>
 							<div class="col-md-8 col-8">
 								<div class="blog_pg1r1ir">
-									<h6 class="fw-bold"><a href="#">A Stunning Classic Shaker Kitchen In Halesowen</a></h6>
-									<h6 class="text-muted mb-0">June 7, 2021</h6>
+									<h6 class="fw-bold"><a href="{% url 'Blog_Detail' k.id %}">{{ k.title }}</a></h6>
+									<h6 class="text-muted mb-0">{{ k.date|date:"F j, Y" }}</h6>
 								</div>
 							</div>
 						</div><hr>
-						<div class="row blog_pg1r1i">
-							<div class="col-md-4 col-4 pe-0">
-								<div class="blog_pg1r1il">
-									<figure class="effect-jazz mb-0">
-										<a href="blog_detail.html"><img src="img/20.jpg" class="w-100" alt="abc"></a>
-									</figure>
-								</div>
-							</div>
-							<div class="col-md-8 col-8">
-								<div class="blog_pg1r1ir">
-									<h6 class="fw-bold"><a href="#">How To Choose A Paint Color For Your Walls When Remodeling</a></h6>
-									<h6 class="text-muted mb-0">June 9, 2021</h6>
-								</div>
-							</div>
-						</div><hr>
-						<div class="row blog_pg1r1i">
-							<div class="col-md-4 col-4 pe-0">
-								<div class="blog_pg1r1il">
-									<figure class="effect-jazz mb-0">
-										<a href="blog_detail.html"><img src="img/23.jpg" class="w-100" alt="abc"></a>
-									</figure>
-								</div>
-							</div>
-							<div class="col-md-8 col-8">
-								<div class="blog_pg1r1ir">
-									<h6 class="fw-bold"><a href="#">The Pros and Cons of Large Format Porcelain</a></h6>
-									<h6 class="text-muted mb-0">June 8, 2021</h6>
-								</div>
-							</div>
-						</div>
+						{% endfor %}
+<!--						<div class="row blog_pg1r1i">-->
+<!--							<div class="col-md-4 col-4 pe-0">-->
+<!--								<div class="blog_pg1r1il">-->
+<!--									<figure class="effect-jazz mb-0">-->
+<!--										<a href="blog_detail.html"><img src="img/20.jpg" class="w-100" alt="abc"></a>-->
+<!--									</figure>-->
+<!--								</div>-->
+<!--							</div>-->
+<!--							<div class="col-md-8 col-8">-->
+<!--								<div class="blog_pg1r1ir">-->
+<!--									<h6 class="fw-bold"><a href="#">How To Choose A Paint Color For Your Walls When Remodeling</a></h6>-->
+<!--									<h6 class="text-muted mb-0">June 9, 2021</h6>-->
+<!--								</div>-->
+<!--							</div>-->
+<!--						</div><hr>-->
+<!--						<div class="row blog_pg1r1i">-->
+<!--							<div class="col-md-4 col-4 pe-0">-->
+<!--								<div class="blog_pg1r1il">-->
+<!--									<figure class="effect-jazz mb-0">-->
+<!--										<a href="blog_detail.html"><img src="img/23.jpg" class="w-100" alt="abc"></a>-->
+<!--									</figure>-->
+<!--								</div>-->
+<!--							</div>-->
+<!--							<div class="col-md-8 col-8">-->
+<!--								<div class="blog_pg1r1ir">-->
+<!--									<h6 class="fw-bold"><a href="#">The Pros and Cons of Large Format Porcelain</a></h6>-->
+<!--									<h6 class="text-muted mb-0">June 8, 2021</h6>-->
+<!--								</div>-->
+<!--							</div>-->
+<!--						</div>-->
 					</div>
 					<div class="blog_pg1r1 mt-4 bg_dark text-center p-4">
 						<h4><a class="text-white text-uppercase" href="index.html"><i class="fa fa-home col_yell"></i> Furniture</a></h4>
 						<h4 class="mt-4 text-white">Contact Us Daily</h4>
 						<h2 class="text-white">+(123) 456-7890</h2>
-						<h6 class="mb-0 mt-4"><a class="button" href="#">GET STARTED <i class="fa fa-long-arrow-right ms-1"></i></a></h6>
+						<h6 class="mb-0 mt-4"><a class="button" href="{% url 'appointment' %}">GET STARTED <i class="fa fa-long-arrow-right ms-1"></i></a></h6>
 					</div>
 					<div class="blog_pg1r1 mt-4">
 						<h5>Gallery</h5>
@@ -306,7 +315,7 @@
 	 <div class="col-md-12">
 	  <h6 class="col_yell fw-bold">YOU DREAM IT, WE DESIGN IT</h6>
 	  <h1 class="text-white mt-3">We can build you the kitchen <br> of your dreams</h1>
-	  <h6 class="mb-0 mt-4"><a class="button" href="#">SCHEDULE A CHAT <i class="fa fa-calendar ms-1"></i></a></h6>
+	  <h6 class="mb-0 mt-4"><a class="button" href="{% url 'appointment' %}">SCHEDULE A CHAT <i class="fa fa-calendar ms-1"></i></a></h6>
 	 </div>
 	</div>
  </div>
