--- a/templates/schedule_appointment.html
+++ b/templates/schedule_appointment.html
@@ -131,11 +131,11 @@
                 </div>
                 <div class="form-group">
                     <label for="date">Date:</label>
-                    <input type="date" id="date" name="date" required>
+                    <input type="date" id="date" name="date" value="{{ i.date }}" required>
                 </div>
                 <div class="form-group">
                     <label for="time">Time:</label>
-                    <input type="time" id="time" name="time" required>
+                    <input type="time" id="time" name="time" value="{{ i.time }}" required>
                 </div>
                 <div class="action-buttons">
                     <button type="submit" class="schedule">Schedule</button>
